--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -8,29 +8,16 @@
     <title>Blog Home - Start Bootstrap Template</title>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for the home page -->
+    <!-- Custom styles for this template -->
     <link href="/css/blog-home.css" rel="stylesheet">
-    <!-- Custom styles for the post single -->
-    <link href="/css/blog-post.css" rel="stylesheet">
-</head>
-<body>
-<!-- Navigation -->
-{{> home/home-nav}}
-<!-- Page Content -->
-<div class="container">
-    {{#if errors}}
-        {{#each errors}}
-            diov.
-        {{/each}}
-    {{/if}}
-    {{> home/form-msgs}}
-   {{{body}}}
-</div>
-<!-- /.container -->
-<!-- Footer -->
-{{> home/footer}}
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
+  </head>
+  <body>
+      {{> home/home-nav}}
+    <!-- Page Content -->
+    <div class="container">
+      {{{body}}}
+    </div>
+    <!-- /.container -->
+    {{> home/footer}}
+  </body>
 </html>
