--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -133,7 +133,7 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="/admin/dashboard">Dashboard</a>
+          <a href="/admin">Dashboard</a>
         </li>
         <li class="breadcrumb-item active">
           <a href="/">Home</a></li>
