--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -1,6 +1,6 @@
 <h1>Create Post</h1>
 
-<form action="/admin/posts/create" method="post">
+<form action="/admin/posts/edit" method="post">
     <div class="form-group">
         <label for="title">Title</label>
         <input name="title" type="text" class="form-control" id="title" placeholder="Enter Title">
