finished CRUD for posts section, added method for creating fake posts

--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -14,7 +14,7 @@
         </select>
     </div>
     <div class="form-check">
-        <label for="alllowComments">
+        <label for="alllowComments" class="form-check-label">
         <input type="checkbox" name="allowComments" class="form-check-input" id="allowComments">
         Allow Comments?</label>
     </div>
