--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -1,26 +1,28 @@
-<h1>Create Post</h1>
+<h1>Edit Post</h1>
 
-<form action="/admin/posts/edit" method="post">
+<form action="/admin/posts/edit/{{post.id}}?_method=PUT" method="post">
     <div class="form-group">
         <label for="title">Title</label>
-        <input name="title" type="text" class="form-control" id="title" placeholder="Enter Title">
+        <input name="title" type="text" class="form-control" id="title" value="{{post.title}}">
     </div>
     <div class="form-group">
         <label for="status">Post Status</label>
         <select name="status" id="status" class="form-control">
+            {{#select post.status}}
             <option value="public">Public</option>
             <option value="private">Private</option>
             <option value="draft">Draft</option>
+            {{/select}}
         </select>
     </div>
     <div class="form-check">
-        <label for="alllowComments">
-        <input type="checkbox" name="allowComments" class="form-check-input" id="allowComments">
+        <label for="alllowComments" class="form-check-label">
+        <input type="checkbox" name="allowComments" class="form-check-input" id="allowComments" {{#if post.allowComments}} checked="checked" {{/if}}>
         Allow Comments?</label>
     </div>
     <div class="form-group">
         <label for="body">Description</label>
-        <textarea rows="10" cols="30" name="body" class="form-control" id="body" placeholder="Enter description text here."></textarea>
+        <textarea rows="10" cols="30" name="body" class="form-control" id="body">{{post.body}}</textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
