added upload feature for files

--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -4,6 +4,7 @@
     <thead>
         <tr>
             <th>Id</th>
+            <th>Image</th>
             <th>Title</th>
             <th>Status</th>
             <th>Allow Comments</th>
@@ -13,6 +14,7 @@
         {{#each posts}}
         <tr>
             <td>{{id}}</td>
+            <td><img height="50" src="/uploads/{{file}}" alt="" class="img img-responsive"></td>
             <td>{{title}}</td>
             <td>{{status}}</td>
             <td>{{allowComments}}</td>
