--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -14,7 +14,7 @@
         {{#each posts}}
         <tr>
             <td>{{id}}</td>
-            <td><img height="50" src="/uploads/{{file}}" alt="" class="img img-responsive"></td>
+            <td><img src="/uploads/{{file}}" class="img-responsive" height="50"></td>
             <td>{{title}}</td>
             <td>{{status}}</td>
             <td>{{allowComments}}</td>
