--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -3,7 +3,7 @@
 <form action="/admin/posts/create" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="title">Title</label>
-        <input name="title" type="text" class="form-control" id="title" placeholder="Enter Title">
+        <input name="title" type="text" class="form-control" id="title" placeholder="Enter Title" required>
     </div>
     <div class="form-group">
         <label for="file">File Upload</label>
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group">
         <label for="body">Description</label>
-        <textarea rows="10" cols="30" name="body" class="form-control" id="body" placeholder="Enter description text here."></textarea>
+        <textarea required rows="10" cols="30" name="body" class="form-control" id="body" placeholder="Enter description text here."></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
