--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -1,9 +1,13 @@
 <h1>Create Post</h1>
 
+{{#each errors}}
+    <h1>{{message}}</h1><br/>
+{{/each}}
+
 <form action="/admin/posts/create" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="title">Title</label>
-        <input name="title" type="text" class="form-control" id="title" placeholder="Enter Title" required>
+        <input name="title" type="text" class="form-control" id="title" placeholder="Enter Title">
     </div>
     <div class="form-group">
         <label for="file">File Upload</label>
@@ -24,7 +28,7 @@
     </div>
     <div class="form-group">
         <label for="body">Description</label>
-        <textarea required rows="10" cols="30" name="body" class="form-control" id="body" placeholder="Enter description text here."></textarea>
+        <textarea rows="10" cols="30" name="body" class="form-control" id="body" placeholder="Enter description text here."></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
