--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,9 +1,11 @@
-<div class="row">
-    <form action="/admin/generate-fake-posts" method="post">
-    <h1>Create Posts (faker)</h1>
-        <div class="form-group">
-            <input name="amount" type="number" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-info">Create Posts</button>
-    </form>
+<div class="container">
+    <div class="row">
+        <form action="/admin/generate-fake-posts" method="post">
+        <h1>Generate Fake Posts</h1>
+            <div class="form-group">
+                <input name="amount" type="number" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-dark">Create Posts</button>
+        </form>
+    </div>
 </div>
