--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -1,5 +1,4 @@
 <h1>All Posts</h1>
-
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -8,6 +7,7 @@
             <th>Title</th>
             <th>Status</th>
             <th>Allow Comments</th>
+            <th>Date Posted</th>
         </tr>
     </thead>
     <tbody>
@@ -18,6 +18,7 @@
             <td>{{title}}</td>
             <td>{{status}}</td>
             <td>{{allowComments}}</td>
+            <td>{{prettyPrintDate date 'MMMM Do YYYY'}}</td>
             <td><a href="/admin/posts/edit/{{id}}" class="btn btn-info">Edit</a></td>
             <td>
                 <form action="/admin/posts/{{id}}?_method=DELETE" method="post">
