--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -10,6 +10,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/css/blog-home.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/blog-post.css">
   </head>
   <body>
       {{> home/home-nav}}
