--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -150,7 +150,7 @@
     <footer class="sticky-footer">
       <div class="container">
         <div class="text-center">
-          <small>Copyright © Your Website 2017</small>
+          <small>Copyright©...nvm, just steal it lol.</small>
         </div>
       </div>
     </footer>
