--- a/views/admin/categories/index.handlebars
+++ b/views/admin/categories/index.handlebars
@@ -1,44 +1,51 @@
-<h1>Create Category</h1>
-{{#each errors}}
-<div class="alert alert-danger">
-    {{message}}<br/>
-</div>
-{{/each}}
-<div class="col-sm-4">
-    <form action="/admin/categories/create" method="post">
-        <div class="form-group">
-            <label for="name">Category Name: </label>
-            <input type="text" name="name" placeholder="Enter Title" class="form-control">
-        </div>
-        <button class="btn btn-primary">Create Category</button>
-    </form>
+<div class="row">
+    <h1>Create Category</h1>
+    {{#each errors}}
+    <div class="alert alert-danger">
+        {{message}}<br/>
+    </div>
+    {{/each}}
+    <div class="col-sm-4">
+        <form action="/admin/categories/create" method="post">
+            <div class="form-group">
+                <label for="name">Category Name: </label>
+                <input type="text" name="name" placeholder="Enter Title" class="form-control">
+            </div>
+            <button class="btn btn-primary">Create Category</button>
+        </form>
+    </div>
+    <br>
+    <hr>
 </div>
 <br>
-<hr>
-<div class="col-sm-8">
-    <h1>Categories</h1>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Date</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each categories}}
-            <tr>
-                <td>{{id}}</td>
-                <td>{{name}}</td>
-                <td>{{prettyPrintDate date 'MMMM Do YYYY'}}</td>
-                <td>
-                    <a href="/admin/categories/edit/{{id}}" class="btn btn-info">Edit</a>
-                </td>
-                <td>
-                    <a href="/admin/categories/delete/{{id}}" class="btn btn-danger">Delete</a>
-                </td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+<div class="row">
+    <div class="col-sm-8">
+        <h1>Categories</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each categories}}
+                <tr>
+                    <td>{{id}}</td>
+                    <td>{{name}}</td>
+                    <td>{{prettyPrintDate date 'MMMM Do YYYY'}}</td>
+                    <td>
+                        <a href="/admin/categories/edit/{{id}}" class="btn btn-info">Edit</a>
+                    </td>
+                    <td>
+                        <form action="/admin/categories/delete/{{id}}?_method=DELETE" method="post">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
 </div>
