--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -16,6 +16,14 @@
         <input type="file" name="file" class="form-control">
     </div>
     <div class="form-group">
+        <label for="category">Category</label>
+        <select name="category" id="category" class="form-control">
+            {{#each categories}}
+                <option value="{{_id}}">{{name}}</option>
+            {{/each}}
+        </select>
+    </div>
+    <div class="form-group">
         <label for="status">Post Status</label>
         <select name="status" id="status" class="form-control">
             <option value="public">Public</option>
