--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -11,6 +11,16 @@
         <input type="file" name="file" class="form-control">
     </div>
     <div class="form-group">
+        <label for="category">Category</label>
+        <select name="category" id="category" class="form-control">
+            {{#select post.category}}
+                {{#each categories}}
+                    <option value="{{_id}}">{{name}}</option>
+                {{/each}}
+            {{/select}}
+        </select>
+    </div>
+    <div class="form-group">
         <label for="status">Post Status</label>
         <select name="status" id="status" class="form-control">
             {{#select post.status}}
