added code to hash passwords, saving user from registration post, figuring out how to pass flash messages through render method

--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/blog-post.css">
   </head>
   <body>
+      {{> home/form-messages}}
       {{> home/home-nav}}
     <!-- Page Content -->
     <div class="container">
