--- a/views/partials/home/form-messages.handlebars
+++ b/views/partials/home/form-messages.handlebars
@@ -5,6 +5,7 @@
 {{/if}}
 
 {{#if errorMessage}}
+    {{!-- {{flashArrayMessages}} --}}
     <div class="alert alert-danger">
         {{errorMessage}}
     </div>
