--- a/views/home/register.handlebars
+++ b/views/home/register.handlebars
@@ -6,17 +6,17 @@
                 <div class="form-row">
                     <div class="col-md-6">
                         <label for="exampleInputName">First name</label>
-                        <input required name="firstName" class="form-control" id="exampleInputName" type="text" aria-describedby="nameHelp" placeholder="Enter first name">
+                        <input {{#if badUser.firstName}} value={{badUser.firstName}}{{/if}} required name="firstName" class="form-control" id="exampleInputName" type="text" aria-describedby="nameHelp" placeholder="Enter first name">
                     </div>
                     <div class="col-md-6">
                         <label for="exampleInputLastName">Last name</label>
-                        <input required name="lastName" class="form-control" id="exampleInputLastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name">
+                        <input {{#if badUser.lastName}} value={{badUser.lastName}}{{/if}} required name="lastName" class="form-control" id="exampleInputLastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name">
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input required name="email" class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+                <input {{#if badUser.email}} value={{badUser.email}}{{/if}} required name="email" class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group">
                 <div class="form-row">
