--- a/views/home/login.handlebars
+++ b/views/home/login.handlebars
@@ -9,12 +9,12 @@
                 </div>
             {{/if}}
             <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input name="email" class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+                <label for="email">Email address</label>
+                <input {{#if badUser.email}}value={{badUser.email}}{{/if}} name="email" class="form-control" id="exampleInputEmail1" placeholder="Email Address" type="email">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input name="password" class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
+                <label for="password">Password</label>
+                <input {{#if badUser.password}}value={{badUser.password}}{{/if}} name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
             </div>
             <div class="form-group">
                 <div class="form-check">
@@ -25,9 +25,9 @@
             <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
         <div class="text-center">
-            <a class="d-block small mt-3" href="/register">Register an Account</a>
+            <a class="d-block small mt-3" href="/register">Register</a>
             <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
-            <a class="d-block small" href="/">Home Page?</a>
+            <a class="d-block small" href="/">Home</a>
         </div>
     </div>
 </div>
