--- a/views/partials/admin/admin-side-nav.handlebars
+++ b/views/partials/admin/admin-side-nav.handlebars
@@ -25,4 +25,10 @@
             <span class="nav-link-text">Categories</span>
           </a>
         </li>
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Comments">
+          <a class="nav-link" href="/admin/comments">
+            <i class="fa fa-fw fa-gear"></i>
+            <span class="nav-link-text">Comments</span>
+          </a>
+        </li>
       </ul>
