added tons of new stuff...

--- a/views/admin/posts/view-posts.handlebars
+++ b/views/admin/posts/view-posts.handlebars
@@ -9,7 +9,6 @@
             <th>Category</th>
             <th>Allow Comments</th>
             <th>Date Posted</th>
-            <th>View Post</th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +22,12 @@
             <td>{{allowComments}}</td>
             <td>{{prettyPrintDate date 'MMMM Do YYYY'}}</td>
             <td><a href="/post/{{id}}">View</a></td>
+            <td><a href="/admin/posts/edit/{{id}}" class="btn btn-info">Edit</a></td>
+            <td>
+                <form action="/admin/posts/{{id}}?_method=DELETE" method="post">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </td>
         </tr>
         {{/each}}
     </tbody>
