--- a/views/home/posts/post.handlebars
+++ b/views/home/posts/post.handlebars
@@ -6,7 +6,7 @@
           <!-- Author -->
           <p class="lead">
             by
-            <a href="#">Someone who does not exist yet...</a>
+            <a href="#">{{post.user.firstName}} {{post.user.lastName}}</a>
           </p>
           <hr>
           <!-- Date/Time -->
@@ -18,49 +18,45 @@
           <!-- Post Content -->
           <p class="lead">{{post.body}}</p>
           <hr>
-          <!-- Comments Form -->
-          <div class="card my-4">
-            <h5 class="card-header">Leave a Comment:</h5>
-            <div class="card-body">
-              <form action="/admin/comments" method="POST">
-                <div class="form-group">
-                  <textarea name="body" class="form-control" rows="3"></textarea>
-                  <input type="hidden" name="id" value={{post.id}}>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
+
+          {{#if user}}
+            {{#if post.allowComments}}
+            <!-- Comments Form -->
+            <div class="card my-4">
+              <h5 class="card-header">Leave a Comment:</h5>
+              <div class="card-body">
+                <form action="/admin/comments" method="POST">
+                  <div class="form-group">
+                    <textarea name="body" class="form-control" rows="3"></textarea>
+                    <input type="hidden" name="id" value={{post.id}}>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
             </div>
-          </div>
+
+            {{else}}
+              <h2>Comments Restricted On This Post.</h2>
+              <br>
+              <hr>
+            {{/if}}
+            {{else}}
+              <h2>Please <a href="/login">log in</a> to add a comment</h2>
+              <br>
+              <hr>
+          {{/if}}
           <!-- Single Comment -->
+          {{#each post.comments}}
           <div class="media mb-4">
             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
             <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              <h5 class="mt-0">{{user.firstName}} {{user.lastName}}</h5>
+              <p>{{body}}</p>
             </div>
           </div>
-          <!-- Comment with nested comments -->
-          <div class="media mb-4">
-            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              <div class="media mt-4">
-                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                <div class="media-body">
-                  <h5 class="mt-0">Commenter Name</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                </div>
-              </div>
-              <div class="media mt-4">
-                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                <div class="media-body">
-                  <h5 class="mt-0">Commenter Name</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                </div>
-              </div>
-            </div>
-          </div>
+          {{/each}}
+
+
         </div>
         {{> home/home-sidebar}}
       </div>
