--- a/views/partials/admin/admin-side-nav.handlebars
+++ b/views/partials/admin/admin-side-nav.handlebars
@@ -15,6 +15,9 @@
               <a href="/admin/posts">All Posts</a>
             </li>
             <li>
+              <a href="/admin/posts/my-posts">View My Posts</a>
+            </li>
+            <li>
               <a href="/admin/posts/create">Create Posts</a>
             </li>
           </ul>
