--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -8,4 +8,7 @@
             <button type="submit" class="btn btn-dark">Create Posts</button>
         </form>
     </div>
+    <div class="row">
+        <canvas id="myChart"></canvas>
+    </div>
 </div>
