added slugs for pretty urls, added mongo option to use useCreateIndex to silence deprecation warning

--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -22,7 +22,7 @@
             <td>{{category.name}}</td>
             <td>{{allowComments}}</td>
             <td>{{prettyPrintDate date 'MMMM Do YYYY'}}</td>
-            <td><a href="/post/{{id}}">View</a></td>
+            <td><a href="/post/{{slug}}">View</a></td>
         </tr>
         {{/each}}
     </tbody>
