--- a/views/home/posts/post.handlebars
+++ b/views/home/posts/post.handlebars
@@ -6,7 +6,7 @@
           <!-- Author -->
           <p class="lead">
             by
-            <a href="#">{{post.user.firstName}} {{post.user.lastName}}</a>
+            <a href="#">{{#if post.user}}{{post.user.firstName}} {{post.user.lastName}}{{else}}Someone who does not exist...{{/if}}</a>
           </p>
           <hr>
           <!-- Date/Time -->
@@ -26,8 +26,11 @@
               <h5 class="card-header">Leave a Comment:</h5>
               <div class="card-body">
                 <form action="/admin/comments" method="POST">
+                <div class="form-group">
+                  <input {{#if commentTitle}}value={{commentTitle}}{{/if}} class="form-control" type="text" name="commentTitle" placeholder="Title Here">
+                </div>
                   <div class="form-group">
-                    <textarea name="body" class="form-control" rows="3"></textarea>
+                    <textarea name="commentBody" class="form-control" rows="3" placeholder="Comment Here">{{#if commentBody}}{{commentBody}}{{/if}}</textarea>
                     <input type="hidden" name="id" value={{post.id}}>
                   </div>
                   <button type="submit" class="btn btn-primary">Submit</button>
