--- a/views/admin/comments/index.handlebars
+++ b/views/admin/comments/index.handlebars
@@ -7,6 +7,7 @@
             <th>Comment Author</th>
             <th>Approve/Disapprove</th>
             <th>Date</th>
+            <th>View Comment</th>
         </tr>
     </thead>
     <tbody>
@@ -16,7 +17,7 @@
             <td>{{user.firstName}} {{user.lastName}}</td>
             <td><input {{#if approveComment}} checked {{/if}} data-id="{{id}}" type="checkbox" name="approveComment"></td>
             <td>{{prettyPrintDate date "MMMM Do YYYY"}}</td>
-            <td><a href="/admin/comments/view/{{slug}}"</td>
+            <td><a href="/admin/comments/view/{{slug}}">View</a></td>
             <td><form action="/admin/comments/delete/{{slug}}?_method=DELETE" method="POST">
                 <button type="submit" class="btn btn-danger">Delete</button>
             </form></td>
