--- a/views/home/posts/post.handlebars
+++ b/views/home/posts/post.handlebars
@@ -1,66 +1,66 @@
 <div class="row">
-        <!-- Post Content Column -->
-        <div class="col-lg-8">
-          <!-- Title -->
-          <h1 class="mt-4">{{post.title}}</h1>
-          <!-- Author -->
-          <p class="lead">
-            by
-            <a href="#">{{#if post.user}}{{post.user.firstName}} {{post.user.lastName}}{{else}}Someone who does not exist...{{/if}}</a>
-          </p>
-          <hr>
-          <!-- Date/Time -->
-          <p>Posted on {{prettyPrintDate date "MMMM Do YYYY"}}</p>
-          <hr>
-          <!-- Preview Image -->
-          <img class="img-fluid rounded" src="/uploads/{{post.file}}" alt="">
-          <hr>
-          <!-- Post Content -->
-          <p class="lead">{{post.body}}</p>
-          <hr>
+  <!-- Post Content Column -->
+  <div class="col-lg-8">
+    <!-- Title -->
+    <h1 class="mt-4">{{post.title}}</h1>
+    <!-- Author -->
+    <p class="lead">
+      by
+      <a href="#">{{#if post.user}}{{post.user.firstName}} {{post.user.lastName}}{{else}}Someone who does not exist...{{/if}}</a>
+    </p>
+    <hr>
+    <!-- Date/Time -->
+    <p>Posted on {{prettyPrintDate date "MMMM Do YYYY"}}</p>
+    <hr>
+    <!-- Preview Image -->
+    <img class="img-fluid rounded" src="/uploads/{{post.file}}" alt="">
+    <hr>
+    <!-- Post Content -->
+    <p class="lead">{{post.body}}</p>
+    <hr>
 
-          {{#if user}}
-            {{#if post.allowComments}}
-            <!-- Comments Form -->
-            <div class="card my-4">
-              <h5 class="card-header">Leave a Comment:</h5>
-              <div class="card-body">
-                <form action="/admin/comments" method="POST">
-                <div class="form-group">
-                  <input {{#if commentTitle}}value={{commentTitle}}{{/if}} class="form-control" type="text" name="commentTitle" placeholder="Title Here">
-                </div>
-                  <div class="form-group">
-                    <textarea name="commentBody" class="form-control" rows="3" placeholder="Comment Here">{{#if commentBody}}{{commentBody}}{{/if}}</textarea>
-                    <input type="hidden" name="id" value={{post.id}}>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-              </div>
-            </div>
-
-            {{else}}
-              <h2>Comments Restricted On This Post.</h2>
-              <br>
-              <hr>
-            {{/if}}
-            {{else}}
-              <h2>Please <a href="/login">log in</a> to add a comment</h2>
-              <br>
-              <hr>
-          {{/if}}
-          <!-- Single Comment -->
-          {{#each post.comments}}
-          <div class="media mb-4">
-            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body">
-              <h5 class="mt-0">{{user.firstName}} {{user.lastName}}</h5>
-              <p>{{body}}</p>
-            </div>
+    {{#if user}}
+      {{#if post.allowComments}}
+      <!-- Comments Form -->
+      <div class="card my-4">
+        <h5 class="card-header">Leave a Comment:</h5>
+        <div class="card-body">
+          <form action="/admin/comments" method="POST">
+          <div class="form-group">
+            <input {{#if commentTitle}}value="{{commentTitle}}"{{/if}} class="form-control" type="text" name="commentTitle" placeholder="Title Here">
           </div>
-          {{/each}}
-
-
+            <div class="form-group">
+              <textarea name="commentBody" class="form-control" rows="3" placeholder="Comment Here">{{#if commentBody}}{{commentBody}}{{/if}}</textarea>
+              <input type="hidden" name="id" value={{post.id}}>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
-        {{> home/home-sidebar}}
       </div>
-      <!-- /.row -->
+
+      {{else}}
+        <h2>Comments Restricted On This Post.</h2>
+        <br>
+        <hr>
+      {{/if}}
+      {{else}}
+        <h2>Please <a href="/login">log in</a> to add a comment</h2>
+        <br>
+        <hr>
+    {{/if}}
+    <!-- Single Comment -->
+    {{#each post.comments}}
+    <div class="media mb-4">
+      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+      <div class="media-body">
+        <h5 class="mt-0">{{user.firstName}} {{user.lastName}}</h5>
+        <p>{{body}}</p>
+      </div>
+    </div>
+    {{/each}}
+
+
+  </div>
+  {{> home/home-sidebar}}
+</div>
+<!-- /.row -->
