--- a/views/admin/categories/edit.handlebars
+++ b/views/admin/categories/edit.handlebars
@@ -3,7 +3,7 @@
     <div class="alert alert-danger">{{message}}</div><br>
 {{/each}}
 <!-- uses PUT http method to send request to router with post id -->
-<form action="/admin/categories/edit/{{category.id}}?_method=PUT" method="post">
+<form action="/admin/categories/edit/{{category.slug}}?_method=PUT" method="post">
     <div class="form-group">
         <label for="name">Category Name</label>
         <input name="name" type="text" class="form-control" id="title" value="{{category.name}}">
